--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
 <h1>index</h1>
@@ -18,5 +19,7 @@
 <a href="{% url 'admin:index' %}">link to admin panel</a>
 <p></p>
 <a href="{% url 'landing' %}">link to landing panel</a>
+
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
 </html>
