--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,23 +12,23 @@
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+
 </head>
 
 <body id="page-top">
 
 <div class="container">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-lg-4 offset-lg-4">
-                <h1 class="h4 text-gray-900 mb-4">Test 1</h1>
+                <h1 class="h4 text-gray-900 mb-4">Test Page</h1>
                 <h4 class="small font-weight-bold">Today is {{ today }}</h4>
             </div>
         </div>
-    </div>
-</div>
-
-<div>
+<p></p>
+<div class="row">
     <p>
         <form action="" method="post">{% csrf_token %}
         {{ form.as_p }}
@@ -36,14 +37,15 @@
             </div>
         </form>
     </p>
-</div>
-
+</div><p></p>
+<p></p><div class="row"></div>
 <a href="{% url 'admin:index' %}">link to admin panel</a>
-
+<p></p></div>
+<p></p>
 <form action='action_url' method='POST'>{% csrf_token %}
-<button type='submit'>Load Rules</button>
+<button type='submit' class="btn btn-primary">Load Rules</button>
 </form>
-
+<p></p>
 <h1>List of Rules</h1>
 <table border="1" width="600">
 <tr>
@@ -65,9 +67,12 @@
 {% endfor %}
 </table>
 
+</div>
+</div>
+
 <p class="row">{{ ar.0 }}</p>
 
-
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 </body>
 </html>
