Form now adds new rules to db

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
+
+<div class="container">
 <h1>index</h1>
 
 <a href="{% url 'admin:index' %}">link to admin panel</a>
 <p></p>
 <a href="{% url 'landing' %}">link to landing panel</a>
-
+</div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
 </html>
