--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -32,11 +32,14 @@
 
 <div>
     <p>
+    <h1 class="small font-weight-bold">Add New Rule</h1>
         <form action="" method="post" class="form-inline">{% csrf_token %}
-        {{ form.as_p }}
-            <div>
-                <button type="submit" class="btn btn-primary">Send</button>
-            </div>
+        <div class="form-group>"><label>Priority: </label>{{ form.priority }}</div>
+        <div class="form-group>"><label>Table: </label>{{ form.table }}</div>
+            <div class="form-group>"><label>IPV: </label>{{ form.ipv }}</div>
+            <div class="form-group>"><label>Chain: </label>{{ form.chain }}</div>
+            <div class="form-group>"><label>Value: </label>{{ form.rule_value }}</div>
+        <button type="submit" class="btn btn-primary">Add Rule</button>
         </form>
     </p>
 </div><p></p>
