--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -29,7 +29,7 @@
         </div>
 <p class="row"></p>
 <form action='{% url 'action_url' %}' method='POST'>{% csrf_token %}
-<button type='submit' class="btn btn-primary">Load Rules</button>
+<button type='submit' class="btn btn-primary">Reload Rules</button>
 </form>
 
     </div>
