--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
 <div class="container">
 <h1>index</h1>
 
-<a href="{% url 'admin:index' %}">link to admin panel</a>
+<a href="{% url 'admin:index' %}">Link to Admin Panel</a>
 <p></p>
-<a href="{% url 'landing' %}">link to landing panel</a>
+<a href="{% url 'landing' %}">Link Landing Panel</a>
 </div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
