--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -20,55 +20,58 @@
 <body id="page-top">
 
 <div class="container">
-    <div class="container">
         <div class="row">
             <div class="col-lg-4 offset-lg-4">
-                <h1 class="h4 text-gray-900 mb-4">Test Page</h1>
+                <h1 class="h4 text-gray-900 mb-4">Firewall Rules Page</h1>
                 <h4 class="small font-weight-bold">Today is {{ today }}</h4>
             </div>
         </div>
-<p class="row"></p>
-<form action='{% url 'action_url' %}' method='POST'>{% csrf_token %}
-<button type='submit' class="btn btn-primary">Reload Rules</button>
-</form>
 
-    </div>
+<form action='{% url 'action_url' %}' method='POST'>{% csrf_token %}
+    <button type='submit' class="btn btn-primary">Reload Rules</button>
+</form>
 
 
 <div>
     <p>
-    <h1 class="small font-weight-bold">Add New Rule</h1>
-        <form action="add_rule" method="post" class="form-inline">{% csrf_token %}
-        <div class="form-group>"><label>Priority: </label>{{ form.priority }}</div>
-        <div class="form-group>"><label>Table: </label>{{ form.table }}</div>
-            <div class="form-group>"><label>IPV: </label>{{ form.ipv }}</div>
-            <div class="form-group>"><label>Chain: </label>{{ form.chain }}</div>
-            <div class="form-group>"><label>Value: </label>{{ form.rule_value }}</div>
-        <button type="submit" class="btn btn-primary">Add Rule</button>
-        </form>
+        <h1 class="small font-weight-bold">Add New Rule</h1>
+            <form action="add_rule" method="post" class="form-inline">{% csrf_token %}
+                <div class="form-group>"><label>Priority: </label>{{ form.priority }}</div>
+                <div class="form-group>"><label>Table: </label>{{ form.table }}</div>
+                <div class="form-group>"><label>IPV: </label>{{ form.ipv }}</div>
+                <div class="form-group>"><label>Chain: </label>{{ form.chain }}</div>
+                <div class="form-group>"><label>Value: </label>{{ form.rule_value }}</div>
+                <button type="submit" class="btn btn-primary">Add Rule</button>
+            </form>
     </p>
-</div><p></p>
+</div>
+
 <p class="row"></p>
 
 <form action='{% url 'export_to_xml' %}' method='POST'>{% csrf_token %}
-<button type='submit' class="btn btn-primary">Load to XML</button>
+    <button type='submit' class="btn btn-primary">Export to XML</button>
 </form>
 
     <div class="border">
-<a href="{% url 'admin:index' %}">link to admin panel</a>
-<p class="row"></p></div>
+        <a href="{% url 'admin:index' %}">Link to Admin Panel</a>
+        <p class="row"></p>
+    </div>
+
 <h1>List of Rules</h1>
 
-<table border="1" width="600">
-<tr>
-<td>Priority</td>
-<td>Table</td>
-<td>ipv</td>
-<td>Chain</td>
-<td>Rule</td>
-</tr>
+<table class="table table-bordered">
 
+    <thead>
+        <tr>
+            <th scope="col">Priority</th>
+            <th scope="col">Table</th>
+            <th scope="col">ipv</th>
+            <th scope="col">Chain</th>
+            <th scope="col">Rule</th>
+        </tr>
+    </thead>
 {% for rule in allrules %}
+    <tbody>
 <tr>
     <td>{{ rule.priority }}</td>
     <td>{{ rule.table }}</td>
@@ -76,12 +79,11 @@
     <td>{{ rule.chain }}</td>
     <td>{{ rule.rule_value }}</td>
 </tr>
+    </tbody>
 {% endfor %}
 </table>
 
 </div>
-
-<p class="row">{{ ar.0 }}</p>
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
