--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -86,6 +86,14 @@
 
 </div>
 
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 </body>
