Small fix for export massage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
 <a href="{% url 'admin:index' %}">Link to Admin Panel</a>
 <p></p>
-<a href="{% url 'landing' %}">Link Landing Panel</a>
+<a href="{% url 'landing' %}">Link to Firewall Rules Panel</a>
 </div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
