--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Index</title>
+  <title>Firewall-cmd Web Administration Tool</title>
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -15,13 +15,23 @@
 </head>
 <body>
 
-<div class="container">
-<h1>index</h1>
+<div class="container-fluid">
+    <h1>Firewall-cmd Web Administration Tool</h1>
+        <div class="col-12">
+        <form action="{% url 'admin:index' %}">
+            <button type="submit" class="btn btn-danger">Admin Panel</button>
+        </form>
+        </div>
 
-<a href="{% url 'admin:index' %}">Link to Admin Panel</a>
-<p></p>
-<a href="{% url 'landing' %}">Link to Firewall Rules Panel</a>
+        <p></p>
+
+        <div class="col-12">
+        <form action="{% url 'landing' %}">
+            <button type="submit" class="btn btn-success">Firewall Rules Panel</button>
+        </form>
+        </div>
+
 </div>
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
 </html>
