--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -97,6 +97,10 @@
 
 </div>
 
+<div class="footer-copyright text-center py-3">Made by Alexey Beleychev
+    <a href="mailto:a.beleichev@abr-region.ru">a.beleichev@abr-region.ru</a>
+</div>
+
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 </body>
