--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,13 @@
         </div>
 
         <p></p>
+
+        <div class="col-12">
+            <form action="{% url 'ovpn_users' %}">
+            <button type="submit" class="btn btn-success">OpenVPN Users Panel</button>
+            </form>
+        </div>
+
         <p></p>
         <p></p>
 
