--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Dashboard Test</title>
+  <title>Dashboard Firewall-cmd Rules</title>
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -67,6 +67,10 @@
     {% endfor %}
 </ul>
 {% endif %}
+
+<p></p>
+
+<p></p>
 
 <h1>List of Rules</h1>
 
