Fix display your list,Fix loading stuck data in cache

--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -63,8 +63,8 @@
 
 <tbody>
     <tr>
-        <td>{{ ouser.name }}</td>
-        <td>{{ ouser.ip }}</td>
+        <td>{{ Ouser.name }}</td>
+        <td>{{ Ouser.ip }}</td>
     </tr>
 </tbody>
 {% endfor %}
