--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,16 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Firewall-cmd Web Administration Tool</title>
+  <title>ABRR OpenVPN Web Administration Tool</title>
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-
+<h1 class="h2 text-gray-900 mb-4 text-center">ABRR OpenVPN Web Administration Tool</h1>
 <div class="container-fluid">
-    <h1>Firewall-cmd Web Administration Tool</h1>
+
 
     <main>
     {% block content %}
