--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Dashboard OpenVPN Users</title>
+  <title>OpenVPN User Web Administration Panel</title>
 
   <!-- Custom fonts for this template-->
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -18,11 +18,14 @@
 <body id="page-top">
 
     <div class="container">
+    <h1 class="h2 text-gray-900 mb-4 text-center">OpenVPN User Web Administration Panel</h1>
 
 <p></p>
+    <h4 class="h4 text-gray-900 mb-4">Add New User</h4>
 
 <form action='{% url 'create_ovpn_user' %}' method='POST'>{% csrf_token %}
     <input type="text" name="username" class="form-control" placeholder="Username" />
+    <p></p>
     <input type="text" name="out_ip" class="form-control" placeholder="Outgoing IP" />
     <p></p>
     <button type='submit' class="btn btn-success">Add User to OpenVPN</button>
@@ -44,12 +47,9 @@
 </ul>
 {% endif %}
 
-    <form action='{% url 'list_ovpn_user' %}' method='POST'>{% csrf_token %}
     <p></p>
-    <button type='submit' class="btn btn-success">Show OpenVPN Users</button>
-    </form>
 
-    <h1>List of OpenVPN Users</h1>
+    <h1 class="h3 text-gray-900 mb-4">List of OpenVPN Users</h1>
 
 <table class="table table-bordered">
 
@@ -69,6 +69,15 @@
 </tbody>
 {% endfor %}
 </table>
+
+        <form action='{% url 'list_ovpn_user' %}' method='POST'>{% csrf_token %}
+            <p></p>
+            <button type='submit' class="btn btn-primary">Load OpenVPN Users from server</button>
+        </form>
+
+    <div class="footer-copyright text-center py-3">Made by Alexey Beleychev
+    <a href="mailto:a.beleichev@abr-region.ru">a.beleichev@abr-region.ru</a>
+</div>
 
     </div>
 
