--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -34,6 +34,7 @@
 
         <p></p>
     <h4 class="h4 text-gray-900 mb-4">Add New User</h4>
+    <p>{{ online_users }}</p>
 
 <form action='{% url 'create_ovpn_user' %}' method='POST'>{% csrf_token %}
     <input type="text" name="username" class="form-control" placeholder="Username" />
@@ -53,6 +54,28 @@
 </ul>
 {% endif %}
 
+    <p></p>
+
+        <h1 class="h3 text-gray-900 mb-4">Online OpenVPN Users</h1>
+
+<table class="table table-bordered">
+
+    <thead>
+        <tr>
+            <th scope="col">Name | Real Address | V.Address | V.IPv6 Address | Bytes Received | Bytes Sent | Connected Since Connected Since | Username | Client ID |Peer ID</th>
+        </tr>
+    </thead>
+{% for element in mylines %}
+
+<tbody>
+    <tr>
+        <td>{{ element }}</td>
+    </tr>
+</tbody>
+{% endfor %}
+</table>
+
+    <p>Total Online: {{ total_online }}</p>
     <p></p>
 
     <h1 class="h3 text-gray-900 mb-4">List of OpenVPN Users</h1>
