Small index changes

--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -62,10 +62,10 @@
 
     <thead>
         <tr>
-            <th scope="col">Name | Real Address | V.Address | V.IPv6 Address | Bytes Received | Bytes Sent | Connected Since Connected Since | Username | Client ID |Peer ID</th>
+            <th scope="col">Name | Real Address | V.Address | V.IPv6 Address | Bytes Received | Bytes Sent | Connected Since | Username | Client ID |Peer ID</th>
         </tr>
     </thead>
-{% for element in mylines %}
+{% for element in user_lines %}
 
 <tbody>
     <tr>
