--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -69,14 +69,14 @@
         </tr>
     </thead>
 
-{% for element in users_online %}
+{% for users in all_online %}
 <tbody>
     <tr>
 
-        <td>{{ element }}</td>
-        <td>{{ rule.table }}</td>
-        <td>{{ rule.ipv }}</td>
-        <td>{{ rule.chain }}</td>
+        <td>{{ users.login }}</td>
+        <td>{{ users.r_ip }}</td>
+        <td>{{ users.v_ip }}</td>
+        <td>{{ users.online_since }}</td>
     </tr>
 </tbody>
 {% endfor %}
