--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -46,6 +46,17 @@
     <button type='submit' class="btn btn-success">Add User to OpenVPN</button>
 </form>
 
+            <p></p>
+
+
+        <h4 class="h4 text-gray-900 mb-4">Revoke User</h4>
+
+<form action='{% url 'revoke_ovpn_user' %}' method='POST'>{% csrf_token %}
+    <input type="text" name="username_r" class="form-control" placeholder="Username" />
+    <p></p>
+    <button type='submit' class="btn btn-warning">Revoke User</button>
+</form>
+
         <p></p>
 
 
