--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load django_bootstrap_breadcrumbs %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -21,27 +22,30 @@
 
 <h1 class="h2 text-gray-900 mb-4 text-center">Firewall-cmd Web Administration Panel</h1>
 
-
+<div class="container">
         <div class="row">
+
+            <p></p>
+    {% block breadcrumbs %}
+        {% breadcrumb "Home" "/" %}
+        {% breadcrumb "Firewall Rules Panel" "landing" %}
+        {% render_breadcrumbs %}
+    {% endblock %}
+
             <div class="col-lg-4 offset-lg-4">
                 <h4 class="small font-weight-bold">Today is {{ today }}</h4>
             </div>
         </div>
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+
         <div class="btn-group btn-group-lg" role="group" aria-label="menu">
-        <form action="{% url 'home' %}">
-            <button type="submit" class="btn btn-primary">Home</button>
-        </form>
+
 <p></p>
         <form action="{% url 'admin:index' %}">
             <button type="submit" class="btn btn-danger">Admin Panel</button>
         </form>
         </div>
-</ul>
+
 <p></p>
-
-
-<div id="content">
 
 <form action='{% url 'action_url' %}' method='POST'>{% csrf_token %}
     <button type='submit' class="btn btn-primary">Reload Rules</button>
