--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -126,9 +126,29 @@
     </tr>
 </tbody>
 {% endfor %}
+
+<div class="pagination">
+    <span class="step-links">
+        {% if allouser.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ allouser.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ allouser.number }} of {{ allouser.paginator.num_pages }}.
+        </span>
+
+        {% if allouser.has_next %}
+            <a href="?page={{ allouser.next_page_number }}">next</a>
+            <a href="?page={{ allouser.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 </table>
 
-<p>Total Online: {{ total_users }}</p>
+
+
+<p>Total Users: {{ total_users }}</p>
 <p></p>
 
 
