--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -118,23 +118,23 @@
 </tbody>
 {% endfor %}
 
-<div class="pagination">
-    <span class="step-links">
+<ul class="pagination">
+
         {% if allrules.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ allrules.previous_page_number }}">previous</a>
+            <li class="page-item"><a class="page-link" href="?page=1">&laquo; first</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ allrules.previous_page_number }}">previous</a></li>
         {% endif %}
 
-        <span class="current">
-            Page {{ allrules.number }} of {{ allrules.paginator.num_pages }}.
-        </span>
+        <li class="page-item disabled"><a class="page-link" tabindex="-1" aria-disabled="true">
+            Page {{ allrules.number }} of {{ allrules.paginator.num_pages }}.</a>
+        </li>
 
         {% if allrules.has_next %}
-            <a href="?page={{ allrules.next_page_number }}">next</a>
-            <a href="?page={{ allrules.paginator.num_pages }}">last &raquo;</a>
+            <li class="page-item"><a class="page-link" href="?page={{ allrules.next_page_number }}">next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ allrules.paginator.num_pages }}">last &raquo;</a></li>
         {% endif %}
-    </span>
-</div>
+
+</ul>
 
 </table>
 
