--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -127,24 +127,23 @@
 </tbody>
 {% endfor %}
 
-<div class="pagination">
-    <span class="step-links">
+<ul class="pagination">
+
         {% if allouser.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ allouser.previous_page_number }}">previous</a>
+            <li class="page-item"><a class="page-link" href="?page=1">&laquo; first</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ allouser.previous_page_number }}">previous</a></li>
         {% endif %}
 
-        <span class="current">
-            Page {{ allouser.number }} of {{ allouser.paginator.num_pages }}.
-        </span>
+        <li class="page-item disabled"><a class="page-link" tabindex="-1" aria-disabled="true">
+            Page {{ allouser.number }} of {{ allouser.paginator.num_pages }}.</a>
+        </li>
 
         {% if allouser.has_next %}
-            <a href="?page={{ allouser.next_page_number }}">next</a>
-            <a href="?page={{ allouser.paginator.num_pages }}">last &raquo;</a>
+            <li class="page-item"><a class="page-link" href="?page={{ allouser.next_page_number }}">next</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ allouser.paginator.num_pages }}">last &raquo;</a></li>
         {% endif %}
-    </span>
-</div>
-</table>
+
+</ul>
 
 
 
