small bug fix in html ousers

--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -145,12 +145,10 @@
 
 </ul>
 
-
+</table>
 
 <p>Total Users: {{ total_users }}</p>
 <p></p>
-
-
 
         <form action='{% url 'list_ovpn_user' %}' method='POST'>{% csrf_token %}
             <p></p>
