Small rules add fix

--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -62,7 +62,8 @@
                 <div class=""><label>Table:  </label>{{ form.table }}</div>
                 <div class=""><label>IPV:  </label>{{ form.ipv }}</div>
                 <div class=""><label>Chain:  </label>{{ form.chain }}</div>
-                <div class=""><label>Value:  </label>{{ form.rule_value }}</div>
+                <div class=""><label>Value:  </label><input type="text" name="rule_value" class="form-control" placeholder="Value" /></div>
+    <p></p>
                 <p></p>
                 <button type="submit" class="btn btn-success">Add Rule</button>
             </form>
