Added checkbox for full access

--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -47,6 +47,10 @@
     <p></p>
     <input type="text" name="out_ip" class="form-control" placeholder="Outgoing IP" />
     <p></p>
+    <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" name="out_all" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Full Access</label>
+                </div>
     <button type='submit' class="btn btn-success">Add User to OpenVPN</button>
 </form>
 
