--- a/templates/ovpn_users/ovpn_users.html
+++ b/templates/ovpn_users/ovpn_users.html
@@ -16,8 +16,13 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="{% static "style.css" %}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script src="{% static "js.js" %}"></script>
+
 </head>
 <body id="page-top">
+
+
 
     <div class="container">
     <h2 class="h2 text-gray-900 mb-4 text-center">OpenVPN User Web Administration Panel</h2>
@@ -45,7 +50,7 @@
 <form action='{% url 'create_ovpn_user' %}' method='POST'>{% csrf_token %}
     <input type="text" name="username" class="form-control" placeholder="Username" />
     <p></p>
-    <input type="text" name="out_ip" class="form-control" placeholder="Outgoing IP" />
+    <input type="text" id="out_ip" name="out_ip" class="form-control" placeholder="Outgoing IP" />
     <p></p>
     <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" name="out_all" id="exampleCheck1">
